## pyproject.toml -*- mode: toml  -*-

[project]
name            = "sphinx_{{cookiecutter.proj_name}}_domain"
version = "0.1.0"
description     = ""
readme          = "README.md"
requires-python = ">=3.12"
license-files   = ["LICENSE"]
keywords        = []
authors         = [
  {name         = "John Grey", email = "jgrey.n.plus.one+sphinxdomain@gmail.com"},
]
classifiers     = [
  "Programming Language :: Python"
]

##-- dependencies
dependencies   = [
    "bibtex-bibble>=0.3.1",
    "docutils>=0.21.2",
    "jgdv>=1.0.1",
    "sphinx>=8.2.3",
]

[tool.uv.sources]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "mypy>=1.17.1",
    "sh>=2.2.2",
    "towncrier>=24.8.0",
    "types-docutils>=0.22.0.20250822",
]
test =[
    "pydot>=4.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "tox>=4.28.4",
    "tox-uv>=1.27.0",
    "ruff>=0.12.8",
]
docs = [
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-autoapi>=3.6.0",
    "sphinx-rtd-theme>=3.0.2",
    "pydot>=4.0.1",
    "tox>=4.28.4",
    "tox-uv>=1.27.0",
]
##-- end dependencies

##-- urls
[project.urls]
homepage      = "https://github.com/jgrey4296/sphinx_{{cookiecutter.proj_name}}_domain"
documentation = "https://sphinx-{{cookiecutter.proj_name}}-domain.readthedocs.io"
repository    = "https://github.com/jgrey4296/sphinx_{{cookiecutter.proj_name}}_domain"
changelog     = "https://github.com/jgrey4296/sphinx_{{cookiecutter.proj_name}}_domain/blob/master/CHANGELOG.md"

##-- end urls

##-- scripts
[project.scripts]
# sphinx_{{cookiecutter.proj_name}}_domain = "sphinx_{{cookiecutter.proj_name}}_domain.__main__:main"

[project.gui-scripts]
# spam-gui      = "spam:main_gui"

[project.entry-points."sphinx.builders"]

##-- end scripts

##-- build-system
[build-system]
requires       = ["hatchling>=1.13"]
build-backend  = "hatchling.build"

[tool.hatch.build]
skip-excluded-dirs  = true
# directory         = ".temp/build"  # or HATCH_BUILD_LOCATION

[tool.hatch.build.targets.sdist]
packages   = ["sphinx_{{cookiecutter.proj_name}}_domain"]
artifacts  = ["*.so"]
exclude    = [
    ".temp", "**.rst",
    "sphinx_{{cookiecutter.proj_name}}_domain/*/__tests", "sphinx_{{cookiecutter.proj_name}}_domain/_docs", "sphinx_{{cookiecutter.proj_name}}_domain/__tests",
]

[tool.hatch.build.targets.wheel]
packages   = ["sphinx_{{cookiecutter.proj_name}}_domain"]
artifacts  = ["*.so"]
exclude    = [
    ".temp", "**.rst",
    "sphinx_{{cookiecutter.proj_name}}_domain/*/__tests", "sphinx_{{cookiecutter.proj_name}}_domain/__tests",
    "sphinx_{{cookiecutter.proj_name}}_domain/_docs",
]

##-- end build-system

# Tools #######################################################################

##-- pytest
# https://docs.pytest.org/en/8.2.x/reference/reference.html#ini-options-ref
[tool.pytest.ini_options]
cache_dir       = ".temp/pytest_cache"
log_file        = ".temp/logs/pytest.log"

log_cli         = false
log_level       = "DEBUG"
log_cli_level   = "INFO"
# log_format      = "%(levelname)s %(name)s : %(message)s"
log_format      = "%(levelname)s %(module)s %(lineno)s : %(message)s"
log_file_level  = "DEBUG"
log_file_format = "%(asctime)s %(levelname)s %(name)s : %(message)s"

##-- end pytest

##-- isort
# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
color_output           = false
py_version             = 311
# profile                = "black"
comment_prefix         = "#"
sections               = [
"FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"
]
default_section        = "THIRDPARTY"
lines_after_imports    = -1
lines_between_sections = 1
lines_between_types    = 0

import_heading_future      = "Imports:"
import_heading_stdlib      = "##-- stdlib imports"
import_heading_thirdparty  = "##-- 3rd party imports"
import_heading_firstparty  = "##-- 1st party imports"
import_heading_localfolder = ""

import_footer_future      = ""
import_footer_stdlib      = "##-- end stdlib imports"
import_footer_thirdparty  = "##-- end 3rd party imports"
import_footer_firstparty  = "##-- end 1st party imports"
import_footer_localfolder = ""

add_imports            = []

##-- end isort

##-- mypy
# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
python_version      = "3.12"
warn_return_any     = true
warn_unused_configs = true
incremental         = true
exclude             = [] # regexs to ignore
cache_dir           = ".temp/mypy_cache"
follow_imports      = "skip"
ignore_missing_imports = false
# mypy_path = [".venv/"]
# Per-module options:
# [[tool.mypy.overrides]]
# module                = "blah"
# disallow_untyped_defs = true

##-- end mypy

