# #  pyproject.toml -*- mode: TOML -*-

[project]
name         = "{{cookiecutter.proj_name}}-dep"
version      = "0.1.0"
description  = "Python Submodule for project to handle rust interaction"
readme       = "README.md"
authors      = [
    { name   = "John Grey", email = "johngrey4296@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

##-- build system: maturin
[build-system]
requires      = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
# https://www.maturin.rs/config.html
# compatibility  = "pypi"
bindings         = "pyo3"  
features         = ["pyo3/extension-module"]
manifest-path    = "../rs_{{cookiecutter.proj_name}}_bridge_py/Cargo.toml"
module-name      = "{{cookiecutter.proj_name}}_dep._rust"

python-packages  = ["{{cookiecutter.proj_name}}_dep"]
python-source    = "src"

include          = ["*.so"]
exclude          = ["**_tests"]
##-- end build system: maturin
