[package]
name                     = "{{cookiecutter.proj_name}}_macros"
version                  = "0.1.0"
description              = "macros crate for project"
edition.workspace        = true
rust-version.workspace   = true
homepage.workspace       = true
documentation.workspace  = true
repository.workspace     = true
authors.workspace        = true
license.workspace        = true

[lib]
proc-macro               = true
doctest                  = false

[dependencies]
proc-macro2.workspace  = true
quote.workspace        = true
syn.workspace          = true
textwrap.workspace     = true

[lints]
workspace  = true
