## Cargo.toml -*- mode: Toml -*-

[package]
name           = "{{cookiecutter.proj_name}}"
version        = "0.1.0"
edition        = { workspace = true }
rust-version   = { workspace = true }
homepage       = { workspace = true }
documentation  = { workspace = true }
repository     = { workspace = true }
authors        = { workspace = true }
license        = { workspace = true }

[lints]
workspace = true

[dependencies]
# Internal deps:
# lib = {workspace=true}

[dev-dependencies]

[features]
# https://doc.rust-lang.org/cargo/reference/features.html
default  = []


[package.metadata.dist]

# Targets
# https://doc.rust-lang.org/cargo/reference/cargo-targets.html
[[bin]]
name               = "{{cookiecutter.proj_name}}"

[lib]
crate-type         = ["cdylib"]
proc-macro         = false
required-features  = []

